GPC/tests/examples/fail/wrongPointers.gpc


int wrongPointers(int *a) {
    int b = a * 6;
}
